--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
       crossorigin="anonymous"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home - TITLE</title>
+    <title>Home - Streaming Mashup</title>
     <link rel="stylesheet" href="../static/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
     <script src="../static/index.js"></script>
@@ -19,9 +19,8 @@
         <div class="hero-body">
             <div class="container">
                 <a href="/">
-                  <h1 class="title"><img src="static/Assets/Flame-Orange.png" style="height: 1.5em;">TITLE</h1>
+                  <h1 class="title"><img src="static/Assets/Flame-Orange.png" style="height: 1.5em;">Streaming Mashup</h1>
                 </a>
-                <h2 class="subtitle">SUBTITLE</h2>
             </div>
         </div>
     </section>
