Added mock result page

--- a/templates/result.html
+++ b/templates/result.html
@@ -7,7 +7,7 @@
       crossorigin="anonymous"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home - TITLE</title>
+    <title>result - Streaming Mashup</title>
     <link rel="stylesheet" href="../static/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
     <script src="../static/result.js"></script>
@@ -15,24 +15,85 @@
   </head>
   <body>
     <section class="hero is-dark is-bold"> 
-        <div class="hero-body">
-            <div class="container">
-                <a href="/">
-                  <h1 class="title"><img src="../static/Assets/Flame-Orange.png" style="height: 1.5em;">TITLE</h1>
-                </a>
-                <h2 class="subtitle">SUBTITLE</h2>
-            </div>
+      <div class="hero-body">
+        <div class="container">
+          <a href="/">
+            <h1 class="title"><img src="../static/Assets/Flame-Orange.png" style="height: 1.5em;">Streaming Mashup</h1>
+          </a>
         </div>
+      </div>
     </section>
+
     <section class="section">
-          <div class="container">
-            <div class="columns">
-              <div class="column center-text">
-                <h1 class="title">NEED TO CHANGE THIS PAGE</h1>
-                </div>
-              </div>
+      <div class="container">
+        <!-- Poster, Title, and other info -->
+        <div class="columns is-mobile">
+          <div class="column is-half-mobile is-one-fifth-desktop">
+            <figure class="image">
+              <img src="../static/Assets/Thor.jpg"/>
+            </figure>
+          </div>
+          <div class="column is-hidden-mobile">
+            <div class="content">
+              <h1 class="title">Thor</h1>
+              <h4>Release date: 2011</h4>
+              <h4>IMDB Rating: 7.0/10</h4>
+              <h4>Rotten Tomatoes: 77%</h4>
+              <h4>Genre: Action, Adventure, Fantasy</h4>
+              <h4>Runtime: 115 min</h4>
             </div>
           </div>
+          <div class="column is-hidden-tablet">
+            <div class="content">
+              <h3 class="title">Thor</h3>
+              <h6>Release date: 2011</h6>
+              <h6>IMDB Rating: 7.0/10</h6>
+              <h6>Rotten Tomatoes: 77%</h6>
+              <h6>Genre: Action, Adventure, Fantasy</h6>
+              <h6>Runtime: 115 min</h6>
+            </div>
+          </div>
+        </div>
+        <hr>
+
+        <!-- Plot -->
+        <div class="content">
+        <h2>Plot</h2>
+          The warrior Thor (Chris Hemsworth) is cast out of the fantastic realm of Asgard by his father Odin (Sir Anthony Hopkins) for his arrogance and sent to Earth to live amongst humans. Falling in love with scientist Jane Foster (Natalie Portman) teaches Thor much-needed lessons, and his new-found strength comes into play as a villain from his homeland sends dark forces toward Earth.
+        </div>
+        <hr>
+
+        <!-- Streaming Availability -->
+        <div class="content">
+          <h2>Streaming Availability</h2>
+          <ul>
+            <li>Hulu</li>
+            <li>Netflix</li>
+            <li>Amazon Prime Video</li>
+          </ul>
+        </div>
+        <hr>
+
+        <!-- Where to Buy -->
+        <div class="content">
+          <h2>Where to Buy</h2>
+          <ul>
+            <li>Walmart</li>
+            <li>BestBuy</li>
+            <li>Amazon</li>
+          </ul>
+        </div>
+        <hr>
+
+        <!-- Showtimes -->
+        <div class="content">
+          <h2>Showtimes</h2>
+          <ul>
+            <li>Theater 1: 7:30pm, 9:30pm</li>
+            <li>Theater 2: 6:00pm, 8:00pm, 10:00pm</li>
+            <li>Theater 3: 5:30pm, 8:30pm</li>
+          </ul>
+        </div>
     </section>
   </body>
 </html>
