--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-      <script
-      src="https://code.jquery.com/jquery-3.3.1.min.js"
-      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-      crossorigin="anonymous"></script>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home - Streaming Mashup</title>
-    <link rel="stylesheet" href="../static/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
+{% extends "base.html" %}
+
+{% block script %}
     <script src="../static/index.js"></script>
     <script src="../static/movieList.js"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-  </head>
-  <body>
-    <section class="hero is-dark is-bold"> 
-        <div class="hero-body">
-            <div class="container">
-                <a href="/">
-                  <h1 class="title"><img src="static/Assets/Flame-Orange.png" style="height: 1.5em;">Streaming Mashup</h1>
-                </a>
-            </div>
-        </div>
-    </section>
-    <section class="section">
+{% endblock %}
+
+{% block content %}
+    <section class="section is-large">
           <div class="container">
             <div class="columns">
               <div class="column center-text">
@@ -42,5 +24,4 @@
             </div>
           </div>
     </section>
-  </body>
-</html>
+{% endblock %}
