--- a/templates/not_found.html
+++ b/templates/not_found.html
@@ -1,33 +1,9 @@
-<!DOCTYPE html>
-<html>
-  <head>
-      <script
-      src="https://code.jquery.com/jquery-3.3.1.min.js"
-      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-      crossorigin="anonymous"></script>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>result - Streaming Mashup</title>
-    <link rel="stylesheet" href="../static/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
-    <script src="../static/result.js"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-  </head>
-  <body>
-    <section class="hero is-dark is-bold"> 
-      <div class="hero-body">
-        <div class="container">
-          <a href="/">
-            <h1 class="title"><img src="../static/Assets/Flame-Orange.png" style="height: 1.5em;">Streaming Mashup</h1>
-          </a>
-        </div>
-      </div>
-    </section>
+{% extends "base.html" %}
 
-    <section class="section">
+{% block content %}
+    <section class="section is-large">
       <div class="container">
         <h1>Sorry, that movie could not be found :(</h1>
       </div>
     </section>
-  </body>
-</html>
+{% endblock %}
