--- a/templates/result.html
+++ b/templates/result.html
@@ -17,7 +17,7 @@
           <div class="column is-hidden-mobile">
             <div class="content">
               <h1 class="title">{{ title }}</h1>
-              <h4>Release date: 2011</h4>
+              <h4>Release date: {{ year }}</h4>
               <h4>IMDB Rating: 7.0/10</h4>
               <h4>Rotten Tomatoes: 77%</h4>
               <h4>Genre: Action, Adventure, Fantasy</h4>
