--- a/templates/result.html
+++ b/templates/result.html
@@ -18,20 +18,28 @@
             <div class="content">
               <h1 class="title">{{ title }}</h1>
               <h4>Release date: {{ year }}</h4>
-              <h4>IMDB Rating: 7.0/10</h4>
-              <h4>Rotten Tomatoes: 77%</h4>
-              <h4>Genre: Action, Adventure, Fantasy</h4>
-              <h4>Runtime: 115 min</h4>
+              <h4>Director: {{ director }}</h4>
+              <h4>IMDB Rating: {{ imRating }}/10</h4>
+              <h4>Rotten Tomatoes: {{ tomato }} </h4>
+              <h4>Genre: {{ genre }}</h4>
+              <h4>Runtime: {{ runtime }}</h4>
+              <h4>Rating: {{ rating }}</h4>
+              <h4>Actors: {{ actors }}</h4>
+              <h4>Website: <a href={{ website }}>{{ website }}</a></h4>
             </div>
           </div>
           <div class="column is-hidden-tablet">
             <div class="content">
               <h3 class="title">{{ title }}</h3>
-              <h6>Release date: 2011</h6>
-              <h6>IMDB Rating: 7.0/10</h6>
-              <h6>Rotten Tomatoes: 77%</h6>
-              <h6>Genre: Action, Adventure, Fantasy</h6>
-              <h6>Runtime: 115 min</h6>
+              <h6>Release date: {{ year }}</h6>
+              <h4>Director: {{ director }}</h4>
+              <h6>IMDB Rating: {{ imRating }}/10</h6>
+              <h6>Rotten Tomatoes: {{ tomato }}</h6>
+              <h6>Genre: {{ genre }}y</h6>
+              <h6>Runtime: {{ runtime }}</h6>
+              <h4>Rating: {{ rating }}</h4>
+              <h4>Actors: {{ actors }}</h4>
+              <h4>Website: <a href={{ website }}>{{ website }} </a></h4>
             </div>
           </div>
         </div>
@@ -40,7 +48,7 @@
         <!-- Plot -->
         <div class="content">
         <h2>Plot</h2>
-          The warrior Thor (Chris Hemsworth) is cast out of the fantastic realm of Asgard by his father Odin (Sir Anthony Hopkins) for his arrogance and sent to Earth to live amongst humans. Falling in love with scientist Jane Foster (Natalie Portman) teaches Thor much-needed lessons, and his new-found strength comes into play as a villain from his homeland sends dark forces toward Earth.
+        {{ plot }}
         </div>
         <hr>
 
