--- a/templates/result.html
+++ b/templates/result.html
@@ -19,8 +19,9 @@
               <h1 class="title">{{ title }}</h1>
               <h4>Release date: {{ year }}</h4>
               <h4>Director: {{ director }}</h4>
-              <h4>IMDB Rating: {{ imRating }}/10</h4>
-              <h4>Rotten Tomatoes: {{ tomato }} </h4>
+              {% for review in reviews %}
+              <h4>{{ review.Source }}: {{review.Value}}</h4>
+              {% endfor %}
               <h4>Genre: {{ genre }}</h4>
               <h4>Runtime: {{ runtime }}</h4>
               <h4>Rating: {{ rating }}</h4>
@@ -33,8 +34,9 @@
               <h3 class="title">{{ title }}</h3>
               <h6>Release date: {{ year }}</h6>
               <h4>Director: {{ director }}</h4>
-              <h6>IMDB Rating: {{ imRating }}/10</h6>
-              <h6>Rotten Tomatoes: {{ tomato }}</h6>
+              {% for review in reviews %}
+              <h4>{{ review.Source }}: {{review.Value}}</h4>
+              {% endfor %}
               <h6>Genre: {{ genre }}y</h6>
               <h6>Runtime: {{ runtime }}</h6>
               <h4>Rating: {{ rating }}</h4>
