--- a/templates/result.html
+++ b/templates/result.html
@@ -69,9 +69,9 @@
         <div class="content">
           <h2>Where to Buy</h2>
           <ul>
-            <li>Walmart</li>
-            <li>BestBuy</li>
-            <li>Amazon</li>
+            <li><a href={{walmart}}>Walmart</a></li>
+            <li><a href={{bestBuy}}>BestBuy</a></li>
+            <li><a href={{amazon}}>Amazon</li>
           </ul>
         </div>
         <hr>
