--- a/templates/result.html
+++ b/templates/result.html
@@ -73,7 +73,7 @@
           <ul>
             <li><a href={{walmart}}>Walmart</a></li>
             <li><a href={{bestBuy}}>BestBuy</a></li>
-            <li><a href={{amazon}}>Amazon</li>
+            <li><a href={{amazon}}>Amazon</a></li>
           </ul>
         </div>
         <hr>
